vlib/v/checker/tests/cast_string_err.out
vlib/v/checker/tests/cast_string_err.vv:2:7: error: cannot cast type `int literal` to string, use `x.str()` instead
    1 | fn main() {
    2 |     a := string(1)
      |          ~~~~~~~~~
    3 |     println(a)
    4 | }
