vlib/v/checker/tests/cast_string_err.vv
fn main() {
	a := string(1)
	println(a)
}